--- a/wp-content/themes/xbrdr/css/parallax.mob.css
+++ b/wp-content/themes/xbrdr/css/parallax.mob.css
@@ -32,34 +32,6 @@
   height: auto;
 }
 
-#menu-primara-lankar {
-  background: #fff;
-  margin: 10px 0;
-  clear: both;
-  float: none;
-  list-style: none;
-  width: 95%;
-  font-weight: bold;
-}
-#menu-primara-lankar li{
-  float:none;
-  padding: none;
-  line-height: 20px;
-}
-#menu-primara-lankar a {
-  float: none;
-  color: #76b729;
-  height: 22px;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-  display: block;
-  width: 100%;
-}
-#menu-primara-lankar a:hover {
-  color: #fff;
-}
-
 .text-content{
   width: 100%;
   overflow:hidden;
@@ -191,4 +163,37 @@ iframe#maps-iframe {
 .map-block {
   width: auto;
   max-width: 100%;
+}
+
+
+@media (max-width: 500px) {
+
+  #menu-primara-lankar {
+    background: #fff;
+    margin: 10px 0;
+    clear: both;
+    float: none;
+    list-style: none;
+    width: 95%;
+    font-weight: bold;
+  }
+  #menu-primara-lankar li{
+    float:none;
+    padding: none;
+    line-height: 20px;
+  }
+  #menu-primara-lankar a {
+    float: none;
+    color: #76b729;
+    height: 22px;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    display: block;
+    width: 100%;
+  }
+  #menu-primara-lankar a:hover {
+    color: #fff;
+  }
+
 }
