--- a/wp-content/themes/xbrdr/css/parallax.mob.css
+++ b/wp-content/themes/xbrdr/css/parallax.mob.css
@@ -1,6 +1,6 @@
 #page,
 .navbar-white .navbar-inner .container {
-  min-width: 10px;
+  min-width: 200px;
 }
 
 .image-container {
@@ -167,6 +167,10 @@ iframe#maps-iframe {
 
 
 @media (max-width: 500px) {
+
+  .navbar-white .navbar-inner {
+    height: auto !important;
+  }
 
   #menu-primara-lankar {
     background: #fff;
