--- a/wp-content/themes/xbrdr/css/styles.css
+++ b/wp-content/themes/xbrdr/css/styles.css
@@ -837,4 +837,7 @@ strong {
 	.down, .shorter {
 		margin: 0px;
 	}
+	.navbar-white .navbar-inner .container {
+    height: auto !important;
+  }
 }
