Tiny style fixes

--- a/wp-content/themes/xbrdr/css/styles.css
+++ b/wp-content/themes/xbrdr/css/styles.css
@@ -645,6 +645,7 @@ strong {
 		max-width: 100%;
 		width: auto !important;
 		display: inline-block;
+		padding: 5px;
 	}
 
 	.span6 .image-border-container {
