--- a/wp-content/themes/xbrdr/css/parallax.css
+++ b/wp-content/themes/xbrdr/css/parallax.css
@@ -539,4 +539,8 @@ strong { color:#76b729; }
 .navbar-white .navbar-inner .container {
   min-width: 960px;
 }
+.navbar-white .navbar-inner .container.fix-height {
+  height: 90px !important;
+}
+
 
