Attempted fix for navigation menu on android

--- a/wp-content/themes/xbrdr/css/parallax.mob.css
+++ b/wp-content/themes/xbrdr/css/parallax.mob.css
@@ -3,6 +3,12 @@
   min-width: 200px;
 }
 
+.navbar .btn-navbar {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+}
+
 .image-container {
   width: auto;
 }
