--- a/wp-content/themes/xbrdr/css/parallax.mob.css
+++ b/wp-content/themes/xbrdr/css/parallax.mob.css
@@ -7,9 +7,12 @@
   position: absolute;
   top: 0px;
   right: 0px;
-  background: transparent url(../mobile-nav-button.png) no repeat 0 0;
-  width: 40px;
-  height: 30px;
+  /*background: pink url(../mobile-nav-button.png) no repeat 0 0;*/
+  width: 20px;
+  height: 20px;
+}
+.navbar .btn-navbar span {
+
 }
 
 .image-container {
