--- a/wp-content/themes/xbrdr/css/styles.css
+++ b/wp-content/themes/xbrdr/css/styles.css
@@ -194,6 +194,9 @@ ul.nav-tabs li.child-page a {
 }
 
 .image-border-container {
+	-webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 	position: relative;
 	padding: 10px;
 	border-radius: 4px;
