--- a/wp-content/themes/xbrdr/css/styles.css
+++ b/wp-content/themes/xbrdr/css/styles.css
@@ -23,6 +23,11 @@ h1 {
 	margin: 20px 0 5px 0 !important;
 }
 
+img,
+iframe {
+	max-width: 100%;
+}
+
 h3 {
 	font-size: 18px;
 	line-height: 18px;
