Mobile style fixes + IE stuff

--- a/wp-content/themes/xbrdr/css/styles.css
+++ b/wp-content/themes/xbrdr/css/styles.css
@@ -113,24 +113,24 @@ ul.nav-tabs li.child-page a {
 .navbar-white .nav > .current-menu-item > a:focus,
 .navbar-white .nav li.current-menu-item:hover a,
 .navbar-white .nav li.current-menu-item:focus a,
-.navbar-white .nav > .child-page > a,
-.navbar-white .nav > .child-page > a:hover,
-.navbar-white .nav > .child-page > a:focus,
+.navbar-white .nav > li.child-page > a,
+.navbar-white .nav > li.child-page > a:hover,
+.navbar-white .nav > li.child-page > a:focus,
 .navbar-white .nav li.child-page:hover a,
 .navbar-white .nav li.child-page:focus a {
-	background: #76b729;
+	background: #75b529;
 	background: -moz-linear-gradient(top, #76b729 0%, #76b729 77%, #98c95f 78%, #98c95f 79%, #649b23 80%, #649b23 100%, #75b529 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #76b729), color-stop(77%, #76b729), color-stop(78%, #98c95f), color-stop(79%, #98c95f), color-stop(80%, #649b23), color-stop(100%, #649b23), color-stop(100%, #75b529));
 	background: -webkit-linear-gradient(top, #76b729 0%, #76b729 77%, #98c95f 78%, #98c95f 79%, #649b23 80%, #649b23 100%, #75b529 100%);
 	background: -o-linear-gradient(top, #76b729 0%, #76b729 77%, #98c95f 78%, #98c95f 79%, #649b23 80%, #649b23 100%, #75b529 100%);
 	background: -ms-linear-gradient(top, #76b729 0%, #76b729 77%, #98c95f 78%, #98c95f 79%, #649b23 80%, #649b23 100%, #75b529 100%);
 	background: linear-gradient(to bottom, #76b729 0%, #76b729 77%, #98c95f 78%, #98c95f 79%, #649b23 80%, #649b23 100%, #75b529 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#76b729', endColorstr='#75b529', GradientType=0 );
+	/*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#76b729', endColorstr='#75b529', GradientType=0 );*/
 	color: #ffffff;
-	border-radius: 3px;
 	-webkit-border-radius: 3px;
 	-o-border-radius: 3px;
 	-moz-border-radius: 3px;
+	border-radius: 3px 3px 3px 3px;
 	box-shadow: none;
 	text-shadow: none;
 	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
@@ -139,10 +139,10 @@ ul.nav-tabs li.child-page a {
 .navbar-white .nav li:focus a {
 	background: #76b729;
 	color: #ffffff;
-	border-radius: 3px 3px 0px 0px;
 	-webkit-border-radius: 3px 3px 0px 0px;
 	-o-border-radius: 3px 3px 0px 0px;
 	-moz-border-radius: 3px 3px 0px 0px;
+	border-radius: 3px 3px 0px 0px;
 	height: 46px;
 	text-shadow: none;
 	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
@@ -887,6 +887,10 @@ strong {
 
   .owner {
   	height: auto !important;
+  }
+
+  .table td {
+  	padding: 2px;
   }
 
 }
