Fixed admin CSS + 404 page

--- a/wp-content/themes/xbrdr/css/admin.css
+++ b/wp-content/themes/xbrdr/css/admin.css
@@ -1,27 +1,27 @@
-.inside {
-  padding: 20px 0;
+.postbox .inside {
+  padding-left:  10px;
 }
 
-.inside label {
+.postbox .inside label {
   display: block;
   font-weight: bold;
   margin: 15px 0 5px 3px;
 }
 
-.inside input[type="text"],
-.inside input[type="email"],
-.inside input[type="number"],
-.inside input[type="tel"] {
+.postbox .inside input[type="text"],
+.postbox .inside input[type="email"],
+.postbox .inside input[type="number"],
+.postbox .inside input[type="tel"] {
   width: 450px;
   margin-bottom: 10px;
   padding: 8px;
 }
 
-.inside input[type="number"] {
+.postbox .inside input[type="number"] {
   width: 225px;
 }
 
-.inside textarea {
+.postbox .inside textarea {
   width: 450px;
   height: 150px;
   margin-bottom: 10px;
