--- a/wp-content/themes/xbrdr/css/parallax.css
+++ b/wp-content/themes/xbrdr/css/parallax.css
@@ -155,7 +155,9 @@ h2.heading-2{font-size:24px; line-height: 1.3; margin-bottom: 3px;}
 
 .text-content {
   width: 300px;
-  z-inxdex: 1000;
+  z-index: 100;
+  background: #fff;
+  background: rgba(255, 255, 255, 0.8);
 }
 
 .right-aligned-text {
@@ -206,7 +208,7 @@ h2.heading-2{font-size:24px; line-height: 1.3; margin-bottom: 3px;}
   position: fixed;
   top: 200px;
   z-index: 10;
-  max-width: 100%;
+  max-width: 50%;
   -webkit-transition: opacity 0.6s ease-in-out;
   -moz-transition: opacity 0.6s ease-in-out;
   -o-transition: opacity 0.6s ease-in-out;
@@ -451,7 +453,6 @@ li.i-24 a {
   left: 210px;
   top: 190px;
   background-image: url(../images/icons/icon_60x60_spikar_och_skruvar.png);
-
 }
 
 
@@ -552,10 +553,128 @@ strong { color:#76b729; }
 
 #page,
 .navbar-white .navbar-inner .container {
-  min-width: 940px;
+  /*min-width: 940px;*/
 }
 .navbar-white .navbar-inner .container.fix-height {
   height: 91px !important;
 }
+
+@media (max-width: 979px) {
+  body {
+    padding-top: 0 !important;
+  }
+  .navbar .brand {
+    margin-left: 25px !important;
+  }
+  .navbar-fixed-top {
+    position: fixed;
+  }
+  #mobile-nav-toggle-switch {
+    margin-right: 25px !important;
+  }
+  .text-content {
+    width: 45%;
+    max-width: 300px;
+  }
+  ul.icons.visa {
+   left: 52%;
+  }
+  .laning-page.map-block {
+    position: fixed;
+    top: 160px;
+    left: auto;
+    right: 5%;
+    margin: 50px 0 0 0;
+    width: 50%;
+    height: auto;
+  }
+  #chapter6-text {
+    margin-top: 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .scroll-arrow {
+    top: 380px;
+  }
+  .text-content {
+    margin-top: -80px !important;
+  }
+  #chapter1-text {
+    margin-top: 0 !important;
+  }
+  #chapter-nav {
+    display: none;
+  }
+  .image-container div {
+    display: relative;
+  }
+  ul#unbuild img {
+    left: auto;
+    right: 0;
+    width: 50%;
+  }
+  ul.icons.visa {
+    display: none;
+/*    margin-left: 0;
+    float: left;
+    left: 0;
+    margin-left: -20px;
+    margin-top: 140px;*/
+  }
+  #chapter6-text {
+    margin-top: -40px !important;
+    width: 35%;
+  }
+/*
+  li.i-20 a {
+    left: 180px;
+    top: 120px;
+  }
+  li.i-21 a {
+    left: 160px;
+    top: -100px;
+  }
+  li.i-22 a {
+    left: 270px;
+    top: -150px;
+  }
+  li.i-23 a {
+    left: 370px;
+    top: -120px;
+  }
+  li.i-24 a {
+    left: 300px;
+    top: 130px;
+  }
+  li.i-25 a {
+    top: 0;
+    left: -20px;
+  }
+  li.i-26 a {
+    top: 0;
+    left: 120px;
+  }
+  li.i-27 a {
+    top: 0;
+    left: 230px;
+  }
+  li.i-28 a {
+    top: 0;
+    left: 360px;
+  }
+*/
+
+}
+
+
+
+
+
+
+
+
+
+
 
 
